# DeepSeek_v1

./: DeepSeek_transformer.ipynb  README.md  hello.py  pyproject.toml
