[project]
name = "deepseek-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.3.0",
    "gradio>=5.14.0",
    "ipykernel>=6.29.5",
    "ipython>=8.32.0",
    "ipywidgets>=8.1.5",
    "requests>=2.32.3",
    "torch>=2.6.0",
    "transformers>=4.48.2",
]
